--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
                 </button>
                 <div class="collapse navbar-collapse justify-content-end " id="navbarNavAltMarkup">
                   <div class="navbar-nav ">
-                    <a class="nav-item nav-link active" href="#">Books <span class="sr-only">(current)</span></a>
-                    <a class="nav-item nav-link active" href="#">Courses</a>
-                    <a class="nav-item nav-link active" href="#">Others</a>
-                    <a class="nav-item nav-link active" href="#">Blog</a>
+                    <a class="nav-item nav-link active" href="#"><button class="allButton">Books</button> <span class="sr-only">(current)</span></a>
+                    <a class="nav-item nav-link active" href="#"><button class="allButton">Courses</button></a>
+                    <a class="nav-item nav-link active" href="#"><button class="allButton">Others</button></a>
+                    <a class="nav-item nav-link active" href="#"><button class="allButton">Blog</button></a>
                     <a class="nav-item nav-link active" href="#"><button class="signIn">Sign In</button></a>
                   </div>
                 </div>
